Add SvgPicture; Update app name for all platforms

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.komentory">
   <uses-permission android:name="android.permission.INTERNET" />
   <application
-      android:label="komentory"
+      android:label="Komentory"
       android:icon="@mipmap/ic_launcher">
       <activity
           android:name=".MainActivity"
