--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   responsive_framework: ^0.1.5
   bitsdojo_window: ^0.1.1+1
   flutter_dotenv: ^5.0.2
+  flutter_svg: ^0.23.0+1
 
 dev_dependencies:
   flutter_test:
