--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 SUPABASE_LOGIN_CALLBACK_URL=komentory://login-callback/
 SUPABASE_ENDPOINT_URL=https://xxxx.supabase.co
 SUPABASE_ANON_KEY=secret
+
+# Supabase storage settings:
+SUPABASE_STORAGE_URL=https://xxxx.supabase.in/storage/v1/object/public/media/app
