--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.komentory">
+    package="com.truewebartisans.komentory">
   <uses-permission android:name="android.permission.INTERNET" />
   <application
       android:label="Komentory"
@@ -32,15 +32,25 @@
               <action android:name="android.intent.action.MAIN"/>
               <category android:name="android.intent.category.LAUNCHER"/>
           </intent-filter>
-          <!-- Add intent-filter for deeplink -->
+          <!-- Deep Links -->
           <intent-filter>
-              <action android:name="android.intent.action.VIEW" />
-              <category android:name="android.intent.category.DEFAULT" />
-              <category android:name="android.intent.category.BROWSABLE" />
-              <!-- Accepts URIs that begin with YOUR_SCHEME://YOUR_HOST -->
-              <data
-                android:scheme="komentory"
-                android:host="login-callback" />
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <!-- Accepts URIs that begin with YOUR_SCHEME://YOUR_HOST -->
+            <data
+              android:scheme="komentory"
+              android:host="login-callback" />
+          </intent-filter>
+          <!-- App Links -->
+          <intent-filter android:autoVerify="true">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <!-- Accepts URIs that begin with https://YOUR_HOST -->
+            <data
+              android:scheme="https"
+              android:host="app.komentory.com" />
           </intent-filter>
       </activity>
       <!-- Don't delete the meta-data below.
