Add secure local storage

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ SUPABASE_ANON_KEY=secret
 
 # Supabase storage settings:
 SUPABASE_STORAGE_URL=https://xxxx.supabase.in/storage/v1/object/public/media/app
+
+# App settings:
+APP_DEFAULT_AVATAR_URL=https://xxxx.supabase.in/storage/v1/object/public/media/default-picture.png
