Add localization; Fix setState on sign in widget

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,5 +55,10 @@
 		</array>
 		<key>UIStatusBarHidden</key>
 		<true/>
+		<key>CFBundleLocalizations</key>
+		<array>
+			<string>en</string>
+			<string>ru</string>
+		</array>
 	</dict>
 </plist>
